[gd_scene load_steps=8 format=3 uid="uid://hl8invlcxyuh"]

[ext_resource type="Script" uid="uid://dcgpdo2u1xsi0" path="res://controllers/camera.gd" id="1_tf3c0"]
[ext_resource type="Texture2D" uid="uid://dw85hjnxoncyy" path="res://textures/Mockups/Sprite-0001.png" id="2_7p6mk"]
[ext_resource type="Script" uid="uid://51cwacan28c3" path="res://controllers/carried_object.gd" id="3_7p6mk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_48gdj"]
render_priority = 127
no_depth_test = true
albedo_color = Color(0, 0, 1, 1)
metallic = 0.7
metallic_specular = 0.9
roughness = 0.4
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 0.2
disable_receive_shadows = true

[sub_resource type="CylinderMesh" id="CylinderMesh_pceqe"]
material = SubResource("StandardMaterial3D_48gdj")
top_radius = 0.05
bottom_radius = 0.02
height = 0.4
radial_segments = 8
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ifya2"]
shading_mode = 0
disable_ambient_light = true
albedo_color = Color(1, 0, 1, 1)
disable_receive_shadows = true

[sub_resource type="CylinderMesh" id="CylinderMesh_kjskr"]
material = SubResource("StandardMaterial3D_ifya2")
top_radius = 0.0
bottom_radius = 0.1
height = 1.0
radial_segments = 4
rings = 1
cap_top = false

[node name="Camera" type="Node3D"]
top_level = true
script = ExtResource("1_tf3c0")

[node name="Rotate" type="Node3D" parent="."]

[node name="Flip" type="Node3D" parent="Rotate"]

[node name="SpringArm3D" type="SpringArm3D" parent="Rotate/Flip"]

[node name="CameraThirdPerson" type="Camera3D" parent="Rotate/Flip/SpringArm3D"]

[node name="AimRaycast" type="RayCast3D" parent="Rotate/Flip/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1)
target_position = Vector3(0, -10000, 0)

[node name="AudioListener3D" type="AudioListener3D" parent="Rotate/Flip/SpringArm3D"]
current = true

[node name="FirstPerson" type="Node3D" parent="Rotate/Flip"]

[node name="CameraFirstPerson" type="Camera3D" parent="Rotate/Flip/FirstPerson"]
cull_mask = 1048573
current = true

[node name="CarriedObject" type="Sprite3D" parent="Rotate/Flip/FirstPerson/CameraFirstPerson"]
transform = Transform3D(0.05, 0, 0, 0, 0.0499683, 0.0017816, 0, -0.0017816, 0.0499683, -0.126938, -0.381106, -0.690381)
visible = false
texture = ExtResource("2_7p6mk")
script = ExtResource("3_7p6mk")

[node name="HoldPosition" type="Node3D" parent="Rotate/Flip/FirstPerson"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="VectorPointer" type="Node3D" parent="Rotate/Flip/FirstPerson/HoldPosition"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rotate/Flip/FirstPerson/HoldPosition/VectorPointer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.2)
mesh = SubResource("CylinderMesh_pceqe")
skeleton = NodePath("../..")

[node name="AimDebugPointer" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
visible = false

[node name="AimDebugPointer_internal" type="MeshInstance3D" parent="AimDebugPointer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
cast_shadow = 0
mesh = SubResource("CylinderMesh_kjskr")
